// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-else.hbs - {"printWidth":5} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 5
     | printWidth
=====================================input======================================
{{#when a}}
  1
{{else when c}}
  2
{{else}}
  3
{{/when}}

{{#when a as |b|}}
  {{b}}
{{else when c as |d|}}
  {{d}}
{{else}}
  3
{{/when}}

=====================================output=====================================
{{#when
  a
}}
  1
{{else when
  c
}}
  2
{{else}}
  3
{{/when}}

{{#when
  a
  as |b|
}}
  {{b}}
{{else when
  c
  as |d|
}}
  {{d}}
{{else}}
  3
{{/when}}
================================================================================
`;

exports[`if-else.hbs - {"printWidth":5} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 5
     | printWidth
=====================================input======================================
{{#if a}}
  1
{{else if b}}
  2
{{else}}
  3
{{/if}}

=====================================output=====================================
{{#if
  a
}}
  1
{{else if
  b
}}
  2
{{else}}
  3
{{/if}}
================================================================================
`;
